--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="data1">
         <p class="data_1"><b>Test: </b></p>
-        <p class="data2"><b>Zahl: </b></p>
+        <p class="data2"><b>Number: </b></p>
 
     </div>
     
