--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@ mdl-layout--fixed-tabs">
 </div>
 <main class="mdl-layout__content">
 <section class="mdl-layout__tab-panel is-active" id="fixed-tab-1">
-<div class="page-content"><p class="data1"><b>Test: </b></p> </div>
+<div class="page-content"><p class="data1"><b>Test: </b></p>
+</div>
 </section>
 <section class="mdl-layout__tab-panel" id="fixed-tab-2">
 <div class="page-content"><p class="data2"><b>Zahl: </b></p></div>
