--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
     <title>API Test</title>
 </head>
 <body>
-
+<!--
     <div class="div1">
         <p class="data1"><b>Test: </b></p> 
         <p class="data2"><b>Zahl: </b></p>
         <p class="data3"><b>User: </b></p>
 
     </div>
+-->
 
 <div class="div1">
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header
@@ -44,6 +45,9 @@ mdl-layout--fixed-tabs">
 <main class="mdl-layout__content">
 <section class="mdl-layout__tab-panel is-active" id="fixed-tab-1">
 <div class="page-content"><p class="data1"><b>Test: </b></p>
+    <p class="data4"><b>B: </b></p>
+
+
 </div>
 </section>
 <section class="mdl-layout__tab-panel" id="fixed-tab-2">
